Details
-
Bug
-
Status: Resolved
-
Critical
-
Resolution: Fixed
-
Impala 4.2.0
-
None
-
ghx-label-9
Description
TestValidateMetrics.test_metrics_are_zero fails for Ozone with
/data/jenkins/workspace/impala-private-ozone-parameterized/repos/Impala/tests/common/impala_service.py:210: in __metric_timeout_assert assert 0, assert_string E AssertionError: Metric impala-server.scan-ranges.num-missing-volume-id did not reach value 0 in 60s.
This passed at one point: https://master-03.jenkins.cloudera.com/view/Impala/view/Evergreen-asf-master/job/impala-asf-master-core-ozone/7/ with commit 17ec3a85c7e3733dacb08a9fcca83fff5ec75102 succeeded. I suspect it started failing as a result of 79e474d310 (IMPALA-10213) because now most tests see Ozone datanodes as local rather than remote.
Attachments
Issue Links
- is caused by
-
IMPALA-10213 Handle block location for Ozone
- Resolved
- relates to
-
IMPALA-11541 Test getStorageIds for block location with Ozone
- Open