IMPALA-11614: Fix test_metrics_are_zero for Ozone

Fixes TestValidateMetrics.test_metrics_are_zero failure and avoids
incrementing the `num-missing-volume-id` metric for Ozone paths because
Ozone currently returns a list of nulls representing volume IDs.
Therefore the metric does not provide useful feedback with Ozone.

Change-Id: Ie0646063361185e04837a8c0fb2842fc4ce3f08f
Reviewed-on: http://gerrit.cloudera.org:8080/19044
Reviewed-by: Joe McDonnell <joemcdonnell@cloudera.com>
Tested-by: Impala Public Jenkins <impala-public-jenkins@cloudera.com>